<resources>
    <string name="app_name">CV Matcher</string>

    <!-- GENERAL PATHS -->


        <string name="USERS_LOGIN_PATH">
            file:///android_asset/index.html#/login
        </string>


    <!-- END GENERAL PATHS -->

    <!-- EMPLOYER -->

    <!-- EMPLOYER PATHS -->

        <string name="MY_JOBS_PATH">
            file:///android_asset/index.html#/myjobs
        </string>

        <string name="DELETED_JOBS_PATH">
            file:///android_asset/index.html#/archive
        </string>

        <string name="COMPANY_PROFILE_PATH">
            file:///android_asset/index.html#/company-profile
        </string>

        <string name="HIRED_PATH">
            file:///android_asset/index.html#/hired
        </string>

        <string name="ADD_JOB_PATH">
            file:///android_asset/index.html#/new-job
        </string>

    <!-- END EMPLOYER PATHS -->

    <!-- END EMPLOYER -->

    <!-- JOB SEEKER PATHS -->

        <string name="JOB_SEEKER_PROFILE_PATH">
             file:///android_asset/index.html#/profile
        </string>

        <string name="SEARCH_JOBS_PATH">
             file:///android_asset/index.html#/search-jobs
        </string>

        <string name="JOB_SEEKER_MY_JOBS_PATH">
             file:///android_asset/index.html#/yourjobs
        </string>

        <string name="FAVORITE_JOBS_PATH">
             file:///android_asset/index.html#/favorites
        </string>

        <string name="JOB_SEEKER_DELETED_JOBS_PATH">
             file:///android_asset/index.html#/deleted
        </string>

    <!-- END JOB SEEKER PATHS -->

    <string name="HEADER_TITLE">
        CV Matcher
    </string>
    <string name="title_activity_sign_in">SignInActivity</string>


    <!--> Sign in string  -->

    <string name="title_text">Sign-In</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>


</resources>
